# deepl-python

./: .bumpversion.toml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  SECURITY.md  catalog-info.yaml  license_checker.sh  pyproject.toml  requirements.txt  tox.ini  upgrading_to_multilingual_glossaries.md
.github/workflows/: add_issues_to_kanban.yml  bumpversion.yml  python-package.yml  run_ci.yml
deepl/: __init__.py  __main__.py  aiohttp_http_client.py  api_data.py  backoff_timer.py  deepl_client.py  exceptions.py  http_client.py  iasync_http_client.py  ihttp_client.py  requests_http_client.py  translator.py  translator_async.py  translator_base.py  util.py  version.py
examples/basic_usage/: README.md  __main__.py
examples/json/: README.md  __main__.py  translate_json.py
examples/mustache/: README.md  __main__.py  html_parsing.py  mustache.py
examples/voice/cli/: README.md  deepl-voice-api-cli.py  pyaudio_utils.py  pyproject.toml
tests/: __init__.py  conftest.py  test_async.py  test_cli.py  test_general.py  test_glossary.py  test_multilingual_glossary.py  test_rephrase_text.py  test_style_rules.py  test_translate_document.py  test_translate_text.py  test_translation_memories.py  test_util.py
